Fix wrong height

--- a/src/routes/List/CardList.less
+++ b/src/routes/List/CardList.less
@@ -39,7 +39,7 @@
   border-radius: @border-radius-sm;
   color: @text-color-secondary;
   width: 100%;
-  height: 188px;
+  height: 183px;
 }
 
 .cardAvatar {
